bug was the SUP too large on mobile

--- a/compiled/style.css
+++ b/compiled/style.css
@@ -338,7 +338,7 @@ body {
 }
 @media screen and (max-width: 639px) {
   .hello h2 {
-    font-size: 150px;
+    font-size: 124px;
     bottom: -90px;
   }
 }
