--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -71,7 +71,7 @@ body {
     	font-size: 280px;
 
     	@media screen and (max-width: 639px) {
-    		font-size: 150px;
+    		font-size: 124px;
     		bottom: -90px;
     	}
  	}
